--- a/app/src/main/res/layout/fragment_metro_stations.xml
+++ b/app/src/main/res/layout/fragment_metro_stations.xml
@@ -21,6 +21,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_close"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/custom_btn_toolbar_selectable"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_close" />
+
         <TextView
             android:id="@+id/custom_title"
             android:layout_width="wrap_content"
@@ -29,7 +41,7 @@
             android:fontFamily="@font/noto_sans_extra_bold"
             android:text="@string/metro_stations"
             android:textColor="@color/black"
-            android:textSize="19sp"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view" />
