--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,10 +53,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="15dp"
                     android:ellipsize="end"
                     android:fontFamily="@font/noto_sans_bold"
+                    android:includeFontPadding="false"
                     android:maxLines="2"
                     android:textColor="@color/app_main_color"
                     android:textSize="20sp"
@@ -71,12 +70,12 @@
                     android:id="@+id/tv_user_id"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="5dp"
-                    android:fontFamily="@font/noto_sans_semibold"
+                    android:fontFamily="@font/noto_sans_bold"
+                    android:includeFontPadding="false"
                     android:textColor="@color/app_main_color"
-                    android:textSize="18sp"
+                    android:textSize="17sp"
                     app:layout_constraintBottom_toBottomOf="@id/cvImage"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/cvImage"
@@ -164,7 +163,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/noto_sans_semibold"
-                    android:text="Москва"
+                    tools:text="Москва"
                     android:textColor="@color/app_main_color"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -184,7 +183,7 @@
                 android:id="@+id/ln_sections"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider">
