--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -5,9 +5,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/main_background"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:background="@color/main_background">
 
         <ScrollView
             android:id="@+id/scroll_view"
@@ -19,24 +18,35 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="100dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="110dp">
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/iv_user_photo"
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/cvImage"
                         android:layout_width="110dp"
                         android:layout_height="110dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="35dp"
-                        android:elevation="5dp"
-                        android:src="@drawable/avatar_empty_square"
+                        android:elevation="0dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="0dp"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:strokeColor="#BDBDBD"
+                        app:strokeWidth="0.5dp">
+
+                        <ImageView
+                            android:id="@+id/iv_user_photo"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/avatar_empty_square" />
+
+                    </com.google.android.material.card.MaterialCardView>
 
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -51,8 +61,8 @@
                         android:textSize="15sp"
                         app:layout_constraintBottom_toTopOf="@id/btn_delete_image"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/iv_user_photo"
-                        app:layout_constraintTop_toTopOf="@id/iv_user_photo" />
+                        app:layout_constraintStart_toEndOf="@id/cvImage"
+                        app:layout_constraintTop_toTopOf="@id/cvImage" />
 
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -67,7 +77,7 @@
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/iv_user_photo"
+                        app:layout_constraintStart_toEndOf="@id/cvImage"
                         app:layout_constraintTop_toBottomOf="@id/btn_change_image" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -88,18 +98,14 @@
                     android:fontFamily="@font/noto_sans_medium"
                     android:text="@string/personal_data"
                     android:textColor="@color/color_of_textview_border"
-                    android:textSize="15sp" />
+                    android:textSize="16sp" />
 
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/InputTextTitleStyle"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="10dp"
-                    android:fontFamily="@font/noto_sans_regular"
-                    android:text="@string/last_name"
-                    android:textColor="@color/color_of_textview_border"
-                    android:textSize="13sp" />
+                    android:text="@string/last_name" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_last_name"
@@ -115,20 +121,16 @@
                     <org.otunjargych.tamtam.ui.views.CustomInputEditText
                         android:id="@+id/et_last_name"
                         style="@style/CustomTextInputEditText"
-                        android:inputType="textCapSentences"
+                        android:inputType="textCapSentences|textNoSuggestions"
                         app:customHint="@string/enter_last_name" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                <androidx.appcompat.widget.AppCompatTextView
+                    style="@style/InputTextTitleStyle"
                     android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/noto_sans_regular"
-                    android:text="@string/first_name"
-                    android:textColor="@color/color_of_textview_border"
-                    android:textSize="13sp" />
+                    android:layout_marginTop="25dp"
+                    android:text="@string/first_name" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_first_name"
@@ -144,20 +146,16 @@
                     <org.otunjargych.tamtam.ui.views.CustomInputEditText
                         android:id="@+id/et_first_name"
                         style="@style/CustomTextInputEditText"
-                        android:inputType="textCapSentences"
+                        android:inputType="textCapSentences|textNoSuggestions"
                         app:customHint="@string/enter_first_name" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/InputTextTitleStyle"
                     android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/noto_sans_regular"
-                    android:text="@string/your_login"
-                    android:textColor="@color/color_of_textview_border"
-                    android:textSize="13sp" />
+                    android:layout_marginTop="25dp"
+                    android:text="@string/your_login" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_login"
@@ -173,21 +171,34 @@
                     <org.otunjargych.tamtam.ui.views.CustomInputEditText
                         android:id="@+id/et_login"
                         style="@style/CustomTextInputEditText"
-                        android:inputType="textCapSentences"
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:inputType="textEmailAddress|textNoSuggestions"
                         app:customHint="@string/enter_login" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_edit_login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/custom_btn_text_selectable"
+                        android:fontFamily="@font/noto_sans_semibold"
+                        android:includeFontPadding="false"
+                        android:paddingHorizontal="0dp"
+                        android:paddingVertical="5dp"
+                        android:text="@string/edit"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="15.5sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/InputTextTitleStyle"
                     android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/noto_sans_regular"
-                    android:text="@string/password"
-                    android:textColor="@color/color_of_textview_border"
-                    android:textSize="13sp" />
+                    android:layout_marginTop="25dp"
+                    android:text="@string/password" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_password"
@@ -203,8 +214,26 @@
                     <org.otunjargych.tamtam.ui.views.CustomInputEditText
                         android:id="@+id/et_password"
                         style="@style/CustomTextInputEditText"
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
                         android:inputType="textPassword"
-                        app:customHint="@string/enter_password" />
+                        app:customHint="@string/enter_password"
+                        tools:text="qqqqqqq" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tv_edit_password"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/custom_btn_text_selectable"
+                        android:fontFamily="@font/noto_sans_semibold"
+                        android:includeFontPadding="false"
+                        android:paddingHorizontal="0dp"
+                        android:paddingVertical="5dp"
+                        android:text="@string/edit"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="15.5sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -224,17 +253,13 @@
                     android:fontFamily="@font/noto_sans_medium"
                     android:text="@string/contacts_data"
                     android:textColor="@color/color_of_textview_border"
-                    android:textSize="15sp" />
+                    android:textSize="16sp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/InputTextTitleStyle"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="10dp"
-                    android:fontFamily="@font/noto_sans_regular"
-                    android:text="@string/phone_number"
-                    android:textColor="@color/color_of_textview_border"
-                    android:textSize="13sp" />
+                    android:text="@string/phone_number" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_phone"
@@ -250,21 +275,17 @@
                     <org.otunjargych.tamtam.ui.views.CustomInputEditText
                         android:id="@+id/et_phone"
                         style="@style/CustomTextInputEditText"
-                        android:inputType="textCapSentences"
+                        android:inputType="phone"
                         app:customHint="@string/enter_phone_number" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/InputTextTitleStyle"
                     android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/noto_sans_regular"
-                    android:text="@string/email"
-                    android:textColor="@color/color_of_textview_border"
-                    android:textSize="13sp" />
+                    android:layout_marginTop="25dp"
+                    android:text="@string/email" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_email"
@@ -280,7 +301,7 @@
                     <org.otunjargych.tamtam.ui.views.CustomInputEditText
                         android:id="@+id/et_email"
                         style="@style/CustomTextInputEditText"
-                        android:inputType="textCapSentences"
+                        android:inputType="textEmailAddress|textNoSuggestions"
                         app:customHint="@string/enter_email" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -289,28 +310,22 @@
             </LinearLayout>
         </ScrollView>
 
+
         <View
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
             android:background="@drawable/background_gradient_white"
-            app:layout_constraintBottom_toTopOf="@id/ln_save" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/ln_save"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_save"
+            style="@style/BtnMainStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_save"
-                style="@style/BtnMainStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/save" />
-        </LinearLayout>
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp"
+            android:text="@string/save"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
