--- a/app/src/main/res/layout/fragment_stories.xml
+++ b/app/src/main/res/layout/fragment_stories.xml
@@ -19,8 +19,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="bottom"
+            android:layout_height="100dp"
             android:background="@drawable/background_gradient_dark_top"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -102,7 +101,7 @@
             android:id="@+id/iv_close"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/custom_btn_toolbar_selectable"
             android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stories"
