--- a/app/src/main/res/layout/item_main_data.xml
+++ b/app/src/main/res/layout/item_main_data.xml
@@ -36,9 +36,18 @@
                 android:cursorVisible="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:inputType="textCapSentences"
+                android:inputType="textCapSentences|textNoSuggestions"
                 app:customHint="@string/enter_note_category" />
 
+            <TextView
+                android:id="@+id/tv_note_category_required"
+                style="@style/CreateNoteFieldsTitleStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/require_category_title"
+                android:textColor="@color/app_main_color"
+                android:textSize="12sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -64,11 +73,21 @@
             <org.otunjargych.tamtam.ui.views.CustomInputEditText
                 android:id="@+id/et_note_name"
                 style="@style/CustomTextInputEditText"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textNoSuggestions"
                 android:maxLines="150"
                 android:singleLine="false"
                 app:customHint="@string/enter_note_name" />
 
+
+            <TextView
+                android:id="@+id/tv_note_name_required"
+                style="@style/CreateNoteFieldsTitleStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/require_note_name_title"
+                android:textColor="@color/app_main_color"
+                android:textSize="12sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -97,7 +116,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="top"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textNoSuggestions"
                 android:maxLines="150"
                 android:minHeight="100dp"
                 android:singleLine="false"
@@ -128,10 +147,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:background="@drawable/custom_btn_text_selectable"
             android:layout_marginTop="5dp"
+            android:background="@drawable/custom_btn_text_selectable"
+            android:fontFamily="@font/noto_sans_semibold"
             android:includeFontPadding="false"
-            android:fontFamily="@font/noto_sans_medium"
             android:paddingHorizontal="0dp"
             android:paddingVertical="5dp"
             android:text="@string/add_phone"
@@ -162,10 +181,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:background="@drawable/custom_btn_text_selectable"
             android:layout_marginTop="5dp"
+            android:background="@drawable/custom_btn_text_selectable"
+            android:fontFamily="@font/noto_sans_semibold"
             android:includeFontPadding="false"
-            android:fontFamily="@font/noto_sans_medium"
             android:paddingHorizontal="0dp"
             android:paddingVertical="5dp"
             android:text="@string/add_phone"
