--- a/app/src/main/res/layout/layout_custom_snack_bar.xml
+++ b/app/src/main/res/layout/layout_custom_snack_bar.xml
@@ -29,9 +29,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:text="Hello world"
+        tools:text="Hello world"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_icon"
